--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   contacts_service: ^0.6.3
   permission_handler: ^11.3.1
   image_picker: ^1.1.2
+  emoji_picker_flutter: ^4.3.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
