--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,10 @@ dependencies:
   permission_handler: ^11.3.1
   image_picker: ^1.1.2
   emoji_picker_flutter: ^4.3.0
-  shared_preferences: ^2.5.2
   intl: ^0.20.2
+  shared_preferences: ^2.5.2
+  image: ^4.5.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
