--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   provider: ^6.1.2
+  firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
