--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,12 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   provider: ^6.1.2
+  firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
-  firebase_core: ^3.12.1
+  font_awesome_flutter: ^10.8.0
+  google_sign_in: ^6.3.0
+
 
 dev_dependencies:
   flutter_test:
