--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,33 +28,29 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.6.5
+  contacts_service: ^0.6.3
+  country_picker: ^2.0.27
+  cupertino_icons: ^1.0.8
+  emoji_picker_flutter: ^4.3.0
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  contacts_service: ^0.6.3
-  permission_handler: ^11.3.1
-  image_picker: ^1.1.2
-  emoji_picker_flutter: ^4.3.0
-  intl: ^0.20.2
-  shared_preferences: ^2.5.2
-  image: ^4.5.2
-  path_provider: ^2.1.5
-  sqflite: ^2.4.1
-  path: ^1.9.0
-  provider: ^6.1.2
-  firebase_core: ^3.12.1
-  firebase_auth: ^5.5.1
-  cloud_firestore: ^5.6.5
+  flutter_dotenv: ^5.2.1
   font_awesome_flutter: ^10.8.0
   google_sign_in: ^6.3.0
-
+  image: ^4.5.2
+  image_picker: ^1.1.2
+  intl: ^0.20.2
+  path: ^1.9.0
+  path_provider: ^2.1.5
+  permission_handler: ^11.3.1
+  provider: ^6.1.2
+  shared_preferences: ^2.5.2
+  sqflite: ^2.4.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,10 +58,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -82,10 +79,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
