--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -73,6 +73,7 @@
     </array>
   </dict>
 </array>
-
+	<key>FirebaseDeepLinkScheme</key>
+	<string>com.example.wtspClone</string>
 </dict>
 </plist>
