--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
+  pinput: ^5.0.1
   provider: ^6.1.2
   shared_preferences: ^2.5.2
   sqflite: ^2.4.1
