--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  camera: ^0.11.1
   cloud_firestore: ^5.6.5
   contacts_service: ^0.6.3
   country_picker: ^2.0.27
