--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -3,23 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1032460508637-eqre5sj79bj64supi4vtl6dmtuusd3hp.apps.googleusercontent.com</string>
+	<string>183806004172-7p6dk3ij4hrkalgne9nnpapgka0l1pjl.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1032460508637-eqre5sj79bj64supi4vtl6dmtuusd3hp</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>1032460508637-ngkkcte5auu9p1c3km37ld8raqkiiaif.apps.googleusercontent.com</string>
+	<string>com.googleusercontent.apps.183806004172-7p6dk3ij4hrkalgne9nnpapgka0l1pjl</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCar_T6378PVD7X2SffPib2hUVrmRlAJkA</string>
+	<string>AIzaSyCaDjyAupIAkjomPvqvVaMjAQYBlwnyoI4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1032460508637</string>
+	<string>183806004172</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.wtspClone</string>
 	<key>PROJECT_ID</key>
-	<string>whatsapp-97a3f</string>
+	<string>whatsappclone-75ae7</string>
 	<key>STORAGE_BUCKET</key>
-	<string>whatsapp-97a3f.firebasestorage.app</string>
+	<string>whatsappclone-75ae7.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1032460508637:ios:03884232cbe6366d78aa34</string>
+	<string>1:183806004172:ios:a4a3992d9b035fdcd1ab69</string>
 </dict>
 </plist>
