--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
 
+  firebase_storage: ^12.4.4
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
