--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
+  flutter_keyboard_visibility: ^6.0.0
   font_awesome_flutter: ^10.8.0
   google_sign_in: ^6.3.0
   image: ^4.5.2
