--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,7 +54,7 @@
 	<key>NSCameraUsageDescription</key>
 <string>your usage description here</string>
 <key>NSMicrophoneUsageDescription</key>
-<string>your usage description here</string>
+<string>We need access to your microphone to send voice messages.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
