--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^6.4.0
   camera: ^0.11.1
   cloud_firestore: ^5.6.5
   contacts_service: ^0.6.3
@@ -52,6 +53,7 @@ dependencies:
   permission_handler: ^11.3.1
   pinput: ^5.0.1
   provider: ^6.1.2
+  record: ^6.0.0
   shared_preferences: ^2.5.2
   sqflite: ^2.4.1
 
