--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  audioplayers: ^6.4.0
+  audio_waveforms: ^1.3.0
   camera: ^0.11.1
   cloud_firestore: ^5.6.5
   contacts_service: ^0.6.3
@@ -43,17 +43,19 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   flutter_keyboard_visibility: ^6.0.0
+  flutter_sound: ^9.28.0
   font_awesome_flutter: ^10.8.0
   google_sign_in: ^6.3.0
+  http: ^1.3.0
   image: ^4.5.2
   image_picker: ^1.1.2
   intl: ^0.20.2
+  just_audio: ^0.9.46
   path: ^1.9.0
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
   pinput: ^5.0.1
   provider: ^6.1.2
-  record: ^6.0.0
   shared_preferences: ^2.5.2
   sqflite: ^2.4.1
 
