--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   emoji_picker_flutter: ^4.3.0
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
-
   firebase_storage: ^12.4.4
   flutter:
     sdk: flutter
@@ -51,6 +50,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.20.2
   just_audio: ^0.9.46
+  lottie: ^3.3.1
   path: ^1.9.0
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
@@ -87,6 +87,7 @@ flutter:
     - assets/contacts/contact.json
     - assets/images/
     - assets/images/alice.png
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
